--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title> zakvallega.com </title>
+<html lang="en">
 
-</head>
+    <head>
+        <title> Dog website</title>
+        <link rel = "stylesheet" href = "styles.css">
+    </head>
 
-<body>
-    <h1> My header!</h1>
-    <p> Test!</p>
+    <body>
+        <h1> All about dogs!</h1>
+        <hr>
+        <h3 id="dogfactheader"></h3>
+        <script>
+            document.getElementById("dogfactheader").innerHTML = "Dog facts!";
+        </script>
 
-</body>
+
+
+        <!-- facts -->
+        <div class="mycontainer">
+        <div>
+            <h2> Dogs Have an Incredible Sense of Smell</h2>
+            <p> Dogs have around 300 million smell receptors, compared to just 5 million in humans. They can detect scents up to 100,000 times better than we can!</p>
+        </div>
+        <div>
+            <h2> Each Dog's Nose Print is Unique</h2>
+            <p> Just like human fingerprints, each dog's nose print has a unique pattern, making it possible to identify them through their nose alone.</p>
+        </div>
+        </div>
+
+    </body>
 
 
 
