--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h2> Each Dog's Nose Print is Unique</h2>
             <p> Just like human fingerprints, each dog's nose print has a unique pattern, making it possible to identify them through their nose alone.</p>
         </div>
+        <img src="images/dog.jpeg" style = "float:left;width:600px;height:400px;">
         </div>
 
     </body>
